# 202505-breakout-hackathon

./: .env.example  .gitignore  Makefile  README.md  middleware.ts  package.json  pnpm-lock.yaml  solana-program-test.yml  tailwind.config.ts
app/: layout.tsx  page.tsx  solana-utils.ts
app/admin/cache/: page.tsx
app/api/cache/: route.ts
app/api/chat/: route.ts
app/api/rewards/: route.ts
app/api/survey/claim/: route.ts
app/api/survey/close/: route.ts
app/api/survey/initialize/: route.ts
app/api/survey/status/: route.ts
app/business/: page.tsx
app/business/ai-embed/: page.tsx
app/chat/: page.tsx
app/dashboard/: page.tsx
app/services/: page.tsx
app/slide/: page.tsx
app/wallet/: page.tsx
components/: auth-mock.tsx  chat-window.tsx  language-switcher.tsx  location-breadcrumb.tsx  privy-auth.tsx  privy-provider.tsx  sample-questions.tsx  simple-auth.tsx  survey-reward-claim.tsx
docs/: SOLANA_API.md  SOLANA_INTEGRATION.md
hooks/: use-solana-survey.ts
lib/: ai-fallback.ts  cache-utils.ts  site-config.ts  translations.ts
lib/solana/: account-utils.ts  borsh-schema.ts  config.ts  instructions.ts
program/: .gitignore  Cargo.toml  README.md  build.sh
program/.github/: dependabot.yml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
program/tests/: integration_test.rs
