[package]
name = "solbridge-rewards"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1